fix all mistakes in swagger
